# t2-cg

./: .gitignore  CMakeLists.txt  ExibePoligonos.cpp  InterseccaoEntreTodasAsLinhas.cpp  PontosNoTriangulo.cpp  README.MD  main.cpp
include/: Envelope.h  LeitorObjeto3D.h  Linha.h  ListaDeCoresRGB.h  Poligono.h  Ponto.h  Temporizador.h
src/: DiagramaVoronoi.cpp  ExibeVARIOSPoligonos.cpp  LeitorObjeto3D.cpp  Linha.cpp  ListaDeCoresRGB.cpp  Poligono.cpp  ProgramaBasico3D.cpp  Temporizador.cpp
